[bdist_wheel]
universal=1

[metadata]
name = qgridtrusted
url = https://github.com/maxwell-k/qgridtrusted/
author = Quantopian Inc.
author_email = opensource@quantopian.com
description = An Interactive Grid for Sorting and Filtering DataFrames in Jupyter Notebook
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE
keywords = ipython, jupyter, widgets
classifiers =
    Development Status :: 4 - Beta
    Framework :: IPython
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Office/Business :: Financial
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Multimedia :: Graphics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
include_package_data = True
zip_safe = False
install_requires =
    notebook
    pandas
    ipywidgets

[flake8]
exclude =
    .git,
    .venv,
    __pycache__,
    setup.py,
    docs

[options.extras_require]
test =
    pytest
    flake8
